--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,13 +2,21 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				
+				<%= link_to 'Profile', current_user, class: "navbar-brand" %>
 			</div>
 			<ul class="nav navbar-nav">
-				
+	        <li class="<%= 'active' if current_page?(feed_path) %>"><%= link_to "FakeBook Feed", feed_path %></li>
+	        <li class="<%= 'active' if current_page?(users_path) %>"><%= link_to "FakeBook Friends", users_path %></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<% if user_signed_in? %>
+		          <li class="dropdown">
+		            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Notifications <b class="caret"></b>
+		            </a>
+		            <ul class="dropdown-menu">
+		              <%= render 'friendship/requested_friends' %>
+		            </ul>
+		          </li>
 				  	<li><%= link_to 'Log Out', destroy_user_session_path, method: 'delete' %></li>
 				<% else %>
 					<li><%= link_to 'Sign Up', new_user_registration_path %></li>
