--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <%= provide(:title, 'Users') %>
+<%= render 'posts/post_form' %>
 
 <% @users.each do |user| %>
   <% unless user == current_user %>
