--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,10 @@
   </head>
 
   <body>
-	 <%= render 'layouts/header' %>
+	  <header>
+	  	<%= render 'layouts/header' %>
+	  </header>
+	 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
