--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <%= provide(:title, @user.name) %>
+<%= render 'posts/post_form' %>
 
 <% unless current_user == @user %>
   <%= render partial: 'friendship/friendships_status', locals: {user: @user} %> 
@@ -6,7 +7,6 @@
 
 <% if @user.posts.any? %>
   <% @user.posts.each do |post| %>
-    <p><%= post.body %><p>
-    <%= render partial: 'likes/like_post', locals: {post: post} %>
+		<%= render partial: 'posts/post_partial', locals: { post: post } %>
   <% end %>
 <% end %>
