--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,15 @@
 <%= provide(:title, @user.name) %>
+
+<div class="row">
+	<aside class="col-md-4">
+		<section class="user_info">
+			<h1>
+				<%= image_tag @user.gravatar_url default: "retro" %>
+				<%= @user.name %>
+			</h1>
+		</section>
+	</aside>
+</div>
 <%= render 'posts/post_form' %>
 
 <% unless current_user == @user %>
