--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,10 @@
 				<%= link_to 'Profile', current_user, class: "navbar-brand" %>
 			</div>
 			<ul class="nav navbar-nav">
-	        <li class="<%= 'active' if current_page?(feed_path) %>"><%= link_to "FakeBook Feed", feed_path %></li>
-	        <li class="<%= 'active' if current_page?(users_path) %>"><%= link_to "FakeBook Friends", users_path %></li>
+				<% if user_signed_in? %>
+		        <li class="<%= 'active' if current_page?(feed_path) %>"><%= link_to "FakeBook Feed", feed_path %></li>
+		        <li class="<%= 'active' if current_page?(users_path) %>"><%= link_to "FakeBook Friends", users_path %></li>
+				<% end %>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<% if user_signed_in? %>
@@ -19,6 +21,7 @@
 		          </li>
 				  	<li><%= link_to 'Log Out', destroy_user_session_path, method: 'delete' %></li>
 				<% else %>
+					<li><%= link_to 'Sign in with Facebook', user_facebook_omniauth_authorize_path %></li>
 					<li><%= link_to 'Sign Up', new_user_registration_path %></li>
 					<li><%= link_to 'Log In', new_user_session_path %></li>
 				<% end %>
