--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,18 @@
-<% post.each do |comment| %>
-	<p>
-		<%= comment.comment %> <br>
-		<i>Posted <%= time_ago_in_words(comment.created_at) %> ago</i>
-		<% if current_user == comment.user %>
-			<%= link_to 'delete', post_comment_path(post, comment), method: :delete %>
-		<% end %>
-	</p>
+<% post.comments.each do |comment| %>
+  <li class="comment">
+    <div class="pull-left">
+      <%= image_tag comment.user.gravatar_url default: "retro", class: 'avatar' %>
+    </div>
+    <div class="comment-body">
+      <div class="comment-heading">
+        <h4 class="user"><%= link_to comment.user.name, user_path(comment.user) %></h4>
+        <h5 class="time"><%= time_ago_in_words(comment.created_at) unless comment.created_at.blank? %> ago</h5>
+      </div>
+      <p><%= comment.comment %></br>
+        <% if current_user == comment.user %>
+          <%= link_to 'delete comment', post_comment_path(post, comment), method: :delete %>
+        <% end %>
+      </p>
+    </div>
+  </li>
 <% end %>
