--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,12 +2,13 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<%= link_to 'Profile', current_user, class: "navbar-brand" %>
+				<%= link_to 'My Profile', current_user, class: "navbar-brand" %>
 			</div>
 			<ul class="nav navbar-nav">
 				<% if user_signed_in? %>
+				<li class="<%= 'active' if current_page?(friendships_path) %>"><%= link_to "My Friends", friendships_path %></li>
 		        <li class="<%= 'active' if current_page?(feed_path) %>"><%= link_to "FakeBook Feed", feed_path %></li>
-		        <li class="<%= 'active' if current_page?(users_path) %>"><%= link_to "FakeBook Friends", users_path %></li>
+		        <li class="<%= 'active' if current_page?(users_path) %>"><%= link_to "FakeBook Users", users_path %></li>
 				<% end %>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
@@ -16,7 +17,7 @@
 		            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Notifications <b class="caret"></b>
 		            </a>
 		            <ul class="dropdown-menu">
-		              <%= render 'friendship/requested_friends' %>
+		              <%= render 'friendships/requested_friends' %>
 		            </ul>
 		          </li>
 				  	<li><%= link_to 'Log Out', destroy_user_session_path, method: 'delete' %></li>
