--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,43 @@
 <%= provide(:title, 'Users') %>
 <%= render 'posts/post_form' %>
 
-<% @users.each do |user| %>
-  <% unless user == current_user %>
-    <p>
-      <strong><%= link_to user.name, user_path(user) %></strong> 
-      <%= render partial: 'friendship/friendships_status', locals: {user: user} %>
-    </p>
-  <% end %>
-<% end %>
+<hr>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="main-box no-header clearfix">
+        <div class="main-box-body clearfix">
+          <div class="table-responsive">
+            <table class="table user-list">
+              <thead>
+                <tr>
+                  <th><span>User</span></th>
+                  <th><span>Friends</span></th>
+                  <th class="text-center"><span>Status</span></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @users.each do |user| %>
+                  <% unless user == current_user %>
+                    <tr>
+                      <td>
+                        <%= image_tag user.gravatar_url default: "retro" %>
+                        <%= link_to user.name, user_path(user) %>
+                      </td>
+                      <td><%= pluralize(user.friends.count, "Friend") %></td>
+                      <td class="text-center">
+                        <div id="friend-form">
+                          <%= render partial: 'friendships/friendships_status', locals: {user: user} %>
+                        </div>
+                      </td>
+                    </tr>
+                  <% end %>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
