--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <%= provide(:title, @user.name) %>
 
+<%= render 'posts/post_form' %>
 <div class="row">
 	<aside class="col-md-4">
 		<section class="user_info">
@@ -10,14 +11,13 @@
 		</section>
 	</aside>
 </div>
-<%= render 'posts/post_form' %>
 
 <% unless current_user == @user %>
   <%= render partial: 'friendship/friendships_status', locals: {user: @user} %> 
 <% end %>
 
 <% if @user.posts.any? %>
-  <% @user.posts.each do |post| %>
+  <% @user.posts.order('created_at DESC').each do |post| %>
 		<%= render partial: 'posts/post_partial', locals: { post: post } %>
   <% end %>
 <% end %>
