--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -1,7 +1,11 @@
-<%= form_for @post do |f| %>
+<%= form_for @post, html: { multipart: true } do |f| %>
 	<div class="text">
 		<%= f.text_area :body, placeholder: "What are you thinking, #{current_user.name}?" %>
 	</div>
+
+	<span class="picture">
+		<%= f.file_field :photo, accept: 'image/jpeg, image/gif, image/png' %>
+	</span>
 
 	<%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
