--- a/app/views/posts/_post_partial.html.erb
+++ b/app/views/posts/_post_partial.html.erb
@@ -19,6 +19,7 @@
       </div> 
       <div class="post-description"> 
         <p><%= post.body %></p>
+        <%= image_tag post.photo.url if post.photo? %>
         <div class="stats">
           <%= render partial: 'likes/like_post', locals: {post: post} %>
           <%= link_to 'View Post', post_path(post), method: :get, class: 'btn btn-default stat-item' %>
