--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
 	  	<%= render 'layouts/header' %>
 	  </header>
 	 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
-
-    <%= yield %>
+	  <div class="container">
+	    <%= render 'layouts/messages' %>
+	    <%= yield %>
+	  </div>
+	  
   </body>
 </html>
