--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,10 @@
 <%= provide(:title, 'Feed') %>
 
 <%= render 'posts/post_form' %>
-<% @posts.each do |post| %>
-	<%= render partial: 'posts/post_partial', locals: { post: post } %>
-<% end %>
+<div id="all-posts">
+	<%= render @posts %>
+</div>
+
+<div id="infinite-scrolling">
+	<%= will_paginate %>
+</div>
