--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,3 @@
 <%= provide(:title, "#{@post.user.name}'s Post") %>
 
-<%= render partial: 'posts/post_partial', locals: {post: @post} %>
+<%= render @post %>
