--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,22 +17,7 @@
                 </tr>
               </thead>
               <tbody>
-                <% @users.each do |user| %>
-                  <% unless user == current_user %>
-                    <tr>
-                      <td>
-                        <%= image_tag user.gravatar_url default: "retro" %>
-                        <%= link_to user.name, user_path(user) %>
-                      </td>
-                      <td><%= pluralize(user.friends.count, "Friend") %></td>
-                      <td class="text-center">
-                        <div id="friend-form">
-                          <%= render partial: 'friendships/friendships_status', locals: {user: user} %>
-                        </div>
-                      </td>
-                    </tr>
-                  <% end %>
-                <% end %>
+                <%= render @users %>
               </tbody>
             </table>
           </div>
