--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -21,7 +21,9 @@
         <p><%= post.body %></p>
         <%= image_tag post.photo.url if post.photo? %>
         <div class="stats">
-          <%= render partial: 'likes/like_post', locals: {post: post} %>
+          <%= div_for post do  %>
+            <%= render partial: 'likes/button', locals: { post: post } %>
+          <% end %>
           <%= link_to 'View Post', post_path(post), method: :get, class: 'btn btn-default stat-item' %>
         </div>
       </div>
